--- a/src/components/Shared/Divider.scss
+++ b/src/components/Shared/Divider.scss
@@ -1,8 +1,8 @@
 @import '../App.scss';
 
 .Divider {
-  border-bottom: 2px solid $text-color;
-  width: 90%;
-  //padding-top: 1em;
-  //margin-bottom: 1em;
+  border-bottom: 1px solid $text-color;
+  width: 95%;
+  padding-top: 1.5em;
+  margin-bottom: 1.5em;
 }
