--- a/src/components/Skills_page/Languages.scss
+++ b/src/components/Skills_page/Languages.scss
@@ -5,36 +5,24 @@
   flex-direction: column;
 
   width: 50%;
-
+  
   .lang-content {
     display: flex;
-
+    
     width: 90%;
-
-    .lang-list {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-  
-      li {
-        list-style: none;
-        text-align: center;
-        font-family: $title-font;
-        font-weight: 700;
-        //padding: .4em 0 .4em 0;
-      }
-    }
-  
-    .lang-bars {
+    
+    table {
       width: 60%;
       color:$dark-green;
     }
 
     .lang-levels {
       text-align: left;
-      //font-size: .69em;
-      position: relative;
-      right: -2em;
+
+      p {
+        padding: 0;
+        margin-top: .78em;
+      }
     }
   }
 }
