--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -37,6 +37,7 @@ $paragraph-font: 'Quicksand', sans-serif;
     padding: 0 auto;
     margin: 0 auto;
     width: 100%;
+    min-height: 55em;
 
     .Navbar {
       align-items: center;
@@ -50,6 +51,8 @@ $paragraph-font: 'Quicksand', sans-serif;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+
+      width: 100%;
 
       .hide-on-mobile {
         display: none;
@@ -133,6 +136,7 @@ $paragraph-font: 'Quicksand', sans-serif;
 
       padding: 3em 0 3em 0;
       height: 15em;
+      width: 100%;
 
       .hide-on-desktop {
         display: none;
