Set up scrolling navigation

--- a/src/App.css
+++ b/src/App.css
@@ -5,28 +5,32 @@ body {
 .App {
   display: flex;
 
-  width: 80vw;
-  height: 80vh;
+  width: 95vw;
+  height: 90vh;
   margin: auto;
-  margin-top: 10vh;
+  margin-top: 5vh;
 
   border: 1px solid red;
 }
 
 header {
-  width: 25%;
+  width: 15%;
 
   border: 1px solid blue;
 }
 
 .main-content {
-  width: 65%;
+  width: 70%;
 
   border: 1px solid orange;
 }
 
+.about {
+  height: 100vh;
+}
+
 .navigation {
-  width: 10%;
+  width: 15%;
 
   border: 1px solid green;
 }
