--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,5 +1,44 @@
 .intro-text {
   margin-left: 2em;
+
+  div {
+    margin: 1em 0;
+  }
+
+  .changing-text {
+    filter: contrast(15);
+    height: .5em;
+
+    span {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      animation: switch 9s infinite ease-in-out;
+      min-width: 100%;
+      margin: auto;
+    }
+
+    span:nth-child(1) {
+      animation-delay: -7s;
+    }
+
+    span:nth-child(2) {
+      animation-delay: -5.5s;
+    }
+
+    span:nth-child(3) {
+      animation-delay: -4s;
+    }
+
+    span:nth-child(4) {
+      animation-delay: -2.5s;
+    }
+
+    span:nth-child(5) {
+      animation-delay: -1s;
+    }
+  }
 }
 
 .intro-imgs {
@@ -7,90 +46,90 @@
 
   width: 65%;
   height: 100%;
-}
 
-.intro-img {
-  height: 14em;
-  width: 14em;
-  border-radius: 50%;
-  position: relative;
-  top: 9em;
-  left: 30em;
-  // animation: float 5s infinite;
-}
+  .intro-img {
+    height: 14em;
+    width: 14em;
+    border-radius: 50%;
+    position: relative;
+    top: 9em;
+    left: 30em;
+    // animation: float 5s infinite;
+  }
 
-.intro-svg {
-  height: 1em;
-  width: 1em;
-  border-radius: 50%;
-  background-color: $lightBlue;
-  color: $darkGray;
-  font-size: 5em;
-  padding: 0.5em;
-}
+  .intro-svg {
+    height: 1em;
+    width: 1em;
+    border-radius: 50%;
+    background-color: $lightBlue;
+    color: $darkGray;
+    font-size: 5em;
+    padding: 0.5em;
 
-.intro-svg:hover {
-  background-color: $accentYellow;
-  animation: spin .5s linear;
-}
+    &:hover {
+      background-color: $accentYellow;
+      animation: spin .5s linear;
+    }
+  }
 
-.reverse-spin {
-  animation: spinReverse .5s linear;
-}
+  .reverse-spin {
+    animation: spinReverse .5s linear;
+  }
 
-.about {
-  position: relative;
-  left: 2em;
-  bottom: 6em;
-}
+  .about {
+    position: relative;
+    left: 2em;
+    bottom: 6em;
+  }
 
-.resume {
-  position: relative;
-  left: 24em;
-  bottom: 2.5em;
-}
+  .resume {
+    position: relative;
+    left: 24em;
+    bottom: 2.5em;
+  }
 
-.portfolio {
-  position: relative;
-  top: 22em;
-  left: 21em;
-}
+  .portfolio {
+    position: relative;
+    top: 22em;
+    left: 21em;
+  }
 
-.contact {
-  position: relative;
-  top: 30em;
-  right: 27em;
-}
+  .contact {
+    position: relative;
+    top: 30em;
+    right: 27em;
+  }
 
-.intro-symbol {
-  font-size: 3em;
-}
+  .intro-symbol {
+    font-size: 3em;
+  }
 
-.angle {
-  position: relative;
-  right: 7em;
-  bottom: 2em;
-}
+  .angle {
+    position: relative;
+    right: 7em;
+    bottom: 2em;
+  }
 
-.curly {
-  position: relative;
-  top: 3em;
-  right: 2em;
-}
+  .curly {
+    position: relative;
+    top: 3em;
+    right: 2em;
+  }
 
-.square {
-  position: relative;
-  left: 5em;
-  bottom: 5em;
-}
+  .square {
+    position: relative;
+    left: 5em;
+    bottom: 5em;
+  }
 
-.func {
-  position: relative;
-  left: 12em;
-  top: 3em;
-}
+  .func {
+    position: relative;
+    left: 12em;
+    top: 3em;
+  }
 
-.arrow {
-  position: relative;
-  left: 3.5em;
+  .arrow {
+    position: relative;
+    left: 3.5em;
+  }
 }
