--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
 
 body {
   background-color: $darkGray;
+  background-image: url(./img/dark-mosaic.png);
   color: $lightBlue;
 }
 
@@ -14,10 +15,6 @@ a,
 a:visited {
   text-decoration: none;
   color: $lightBlue;
-}
-
-a:hover {
-  color: $accentYellow;
 }
 
 ul {
