--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -54,6 +54,7 @@
     position: relative;
     top: 9em;
     left: 30em;
+    box-shadow: $lightBlue 0px 0px 80px 0px;
     // animation: float 5s infinite;
   }
 
@@ -65,10 +66,11 @@
     color: $darkGray;
     font-size: 5em;
     padding: 0.5em;
+    
 
     &:hover {
-      background-color: $accentYellow;
       animation: spin .5s linear;
+      box-shadow: $lightBlue 0px 0px 40px 0px;
     }
   }
 
