--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 @import './components/Footer/Footer.scss';
 @import './components/Navbar/Navbar.scss';
 @import './pages/Home/Home.scss';
+@import './pages/Resume/Resume.scss';
 
 body {
   background-color: $darkGray;
@@ -47,8 +48,28 @@ ul {
   flex-direction: column;
 }
 
+.wrap {
+  flex-wrap: wrap;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
 .hidden {
   visibility: hidden;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.underline:hover {
+  text-decoration: underline;
 }
 
 .App {
