Change page name from resume to skills

--- a/src/pages/Skills/Skills.scss
+++ b/src/pages/Skills/Skills.scss
@@ -1,4 +1,4 @@
-img {
+img.logo {
   height: 5rem;
   width: auto;
   filter: brightness(0) saturate(100%) invert(93%) sepia(16%) saturate(244%) hue-rotate(146deg) brightness(102%) contrast(98%);
