--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
 @import './components/Footer/Footer.scss';
 @import './components/Navbar/Navbar.scss';
 @import './pages/Home/Home.scss';
-@import './pages/Resume/Resume.scss';
+@import './pages/Skills/Skills.scss';
 
 body {
   background-color: $darkGray;
