--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -20,22 +20,26 @@
     }
 
     span:nth-child(1) {
-      animation-delay: -7s;
+      animation-delay: -8.5s;
     }
 
     span:nth-child(2) {
-      animation-delay: -5.5s;
+      animation-delay: -7s;
     }
 
     span:nth-child(3) {
-      animation-delay: -4s;
+      animation-delay: -5.5s;
     }
 
     span:nth-child(4) {
-      animation-delay: -2.5s;
+      animation-delay: -4s;
     }
 
     span:nth-child(5) {
+      animation-delay: -2.5s;
+    }
+
+    span:nth-child(6) {
       animation-delay: -1s;
     }
   }
