Add contact form + backend functionality

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 @import './pages/Home/Home.scss';
 @import './pages/About/About.scss';
 @import './pages/Skills/Skills.scss';
+@import './pages/Contact/Contact.scss';
 
 body {
   background-color: $darkGray;
