--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -8,11 +8,6 @@
   border-radius: 4px;
   padding: 5rem;
 
-  textarea {
-    resize: vertical;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  }
-
   .transparent-input {
     height: 3rem;
     background: transparent;
@@ -44,6 +39,12 @@
       opacity: 50%;
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
+  }
+
+  textarea {
+    resize: vertical;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    height: 5rem !important;
   }
 
   button {
