Add minimal styling to carousel items

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
 @import './pages/Skills/Skills.scss';
 @import './pages/Contact/Contact.scss';
 @import './pages/Portfolio/Portfolio.scss';
+@import './components/Slide/Slide.scss';
 
 body {
   background-color: $darkGray;
