--- a/src/components/Slide/Slide.scss
+++ b/src/components/Slide/Slide.scss
@@ -1,80 +1,15 @@
-
-
-// .slides {
-//   display: grid;
-//   > .slide {
-//     grid-area: 1 / -1;
-//   }
-
-//   > button {
-//     appearance: none;
-//     background: transparent;
-//     border: none;
-//     color: white;
-//     position: absolute;
-//     font-size: 5rem;
-//     width: 5rem;
-//     height: 5rem;
-//     top: 30%;
-//     transition: opacity 0.3s;
-//     opacity: 0.7;
-//     z-index: 5;
-
-//     &:hover {
-//       opacity: 1;
-//     }
-
-//     &:focus {
-//       outline: none;
-//     }
-
-//     &:first-child {
-//       left: -50%;
-//     }
-//     &:last-child {
-//       right: -50%;
-//     }
-//   }
-// }
-
-.slide {
-  //transform-style: preserve-3d;
-  // border: solid 1px red;
-
-  // &[data-active] {
-  //   .slideContent > * {
-  //     transform: none;
-  //     opacity: 1;
-  //   }
-  // }
-}
-
-.slideContent {
-  width: 30vw;
-  height: 40vw;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  transition: transform 0.5s ease-in-out;
-  opacity: 0.7;
-
-  display: grid;
+.slide-content {
+  justify-content: space-evenly;
   align-content: center;
-
-  transform-style: preserve-3d;
-  transform: perspective(1000px) translateX(calc(100% * var(--offset)))
-    rotateY(calc(-45deg * var(--dir)));
+  width: 95vw;
+  height: 35vw;
 }
 
-.slideContentInner {
-  transform-style: preserve-3d;
-  transform: translateZ(2rem);
-  transition: opacity 0.3s linear;
-  text-shadow: 0 0.1rem 1rem #000;
-  opacity: 0;
+.slide-text {
+  width: 50rem;
+  text-align: center;
 
-  .slideSubtitle,
-  .slideTitle {
+  .slide-title {
     font-size: 2rem;
     font-weight: normal;
     letter-spacing: 0.2ch;
@@ -82,31 +17,27 @@
     margin: 0;
   }
 
-  .slideSubtitle::before {
-    content: "— ";
+  .slide-description {
+    margin: 0;
+    font-size: 1.5rem;
+    letter-spacing: 0.2ch;
+    margin: 2rem 0;
   }
 
-  .slideDescription {
-    margin: 0;
-    font-size: 0.8rem;
-    letter-spacing: 0.2ch;
+  .slide-stack {
+    font-size: 1.3rem;
+
+    >span {
+      font-weight: bold;
+    }
   }
 }
 
-.slideBackground {
-  position: fixed;
-  top: 0;
-  left: -10%;
-  right: -10%;
-  bottom: 0;
+.slide-image {
+  width:60%;
+  height: 100%;
+  background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
-  z-index: -1;
-  opacity: 0;
-  transition: opacity 0.3s linear, transform 0.3s ease-in-out;
-  pointer-events: none;
-
-  transform: translateX(calc(10% * var(--dir)));
 }
 
 .slide[data-active] {
