--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@
 @import './pages/Contact/Contact.scss';
 @import './pages/Portfolio/Portfolio.scss';
 @import './components/Slide/Slide.scss';
+@import './components/CarouselControls/CarouselControls.scss';
 
 body {
   background-color: $darkGray;
