Add clickable Carousel Indicators

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@
 @import './pages/Portfolio/Portfolio.scss';
 @import './components/Slide/Slide.scss';
 @import './components/CarouselControls/CarouselControls.scss';
+@import './components/CarouselIndicators/CarouselIndicators.scss';
 
 body {
   background-color: $darkGray;
