--- a/src/components/CarouselIndicators/CarouselIndicators.scss
+++ b/src/components/CarouselIndicators/CarouselIndicators.scss
@@ -1,22 +1,24 @@
+@import '../../styles/Colors.scss';
+
 .carousel-indicators {
   position: absolute;
   transform: translateX(-50%);
   left: 50%;
   bottom: 15vh;
   z-index: 2;
-}
 
-.carousel-indicator {
-  width: 15px;
-  height: 15px;
-  border: none;
-  background: #fff;
-  opacity: 0.5;
-  margin: 0.2em;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.active {
-  opacity: 1;
+  .carousel-indicator {
+    width: 15px;
+    height: 15px;
+    border: none;
+    background: $lightBlue;
+    opacity: 0.5;
+    margin: 0.2em;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
+  .active {
+    opacity: 1;
+  }
 }
