--- a/src/components/Slide/Slide.scss
+++ b/src/components/Slide/Slide.scss
@@ -1,5 +1,26 @@
+@import '../../styles/Colors.scss';
+
 .carousel-item {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-around;
+
   width: 100%;
-  margin-top: -60vh;
+  height: 100%;
+
+  .slide-text {
+    width: 35%;
+
+    p {
+      white-space: normal;
+    }
+  }
+
+  img {
+    height: 70%;
+  }
+}
+
+.reverse {
+  flex-direction: row-reverse;
 }
