--- a/src/pages/Portfolio/Portfolio.scss
+++ b/src/pages/Portfolio/Portfolio.scss
@@ -1,25 +1,21 @@
-// *,
-// ::before,
-// ::after {
-//   margin: 0;
-//   padding: 0;
-//   box-sizing: border-box;
-// }
-
 .container {
   display: flex;
   align-items: center;
-  justify-content: center;
-}
 
-.carousel {
-  margin: 0 auto;
-  overflow: hidden;
-  max-width: 96vw;
-}
-
-.carousel-inner {
+  width: 100%;
+  height: 75vh;
   white-space: nowrap;
-  height: 70vh;
-  transition: ease 1s;
+  
+  .carousel {
+    margin: 0 auto;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    
+    .carousel-inner {
+      width: 100%;
+      height: 100%;
+      transition: ease 1s;
+    }
+  }
 }
