--- a/src/components/Slide/Slide.scss
+++ b/src/components/Slide/Slide.scss
@@ -3,7 +3,7 @@
 .carousel-item {
   display: inline-flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 
   width: 100%;
   height: 100%;
@@ -15,12 +15,15 @@
       white-space: normal;
     }
   }
-
-  img {
-    height: 70%;
-  }
 }
 
 .reverse {
   flex-direction: row-reverse;
+  align-items: baseline;
+
+  .slide-text {
+    align-self: flex-start;
+    position: relative;
+    top: 15%;
+  }
 }
