--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -73,13 +73,40 @@
     
 
     &:hover {
-      animation: spin .5s linear;
+      opacity: 0;
+      transition: ease 1.5s;
       box-shadow: $lightBlue 0px 0px 40px 0px;
+    }
+
+    &:not(:hover) {
+      opacity: 1;
+      transition: ease 2s;
     }
   }
 
-  .reverse-spin {
-    animation: spinReverse .5s linear;
+  .menu-text {
+    opacity: 0;
+    position: relative;
+    top: -10rem;
+    font-size: xx-large;
+    font-weight: bold;
+    color: $darkGray;
+    text-align: center;
+    background-color: $lightBlue;
+    height: 10rem;
+    width: 10rem;
+    border-radius: 50%;
+
+    &:hover {
+      opacity: 1;
+      transition: ease 2s;
+      box-shadow: $lightBlue 0px 0px 40px 0px;
+    }
+
+    &:not(:hover) {
+      opacity: 0;
+      transition: ease 1.5s;
+    }
   }
 
   .about {
