--- a/src/styles/Animations.scss
+++ b/src/styles/Animations.scss
@@ -12,7 +12,7 @@
 
 @-webkit-keyframes float {
   50% {
-    transform: translateY(30px);
+    -webkit-transform: translateY(30px);
   }
 }
 
@@ -22,58 +22,18 @@
   }
 }
 
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes spinReverse {
-  0% {
-    -webkit-transform: rotate(360deg);
-  }
-  
-  100% {
-    -webkit-transform: rotate(0deg);
-  }
-}
-
-@keyframes spinReverse {
-  0% {
-    transform: rotate(360deg);
-  }
-  
-  100% {
-    transform: rotate(0deg);
-  }
-}
-
 @keyframes switch {
- 
+
   0%,
   5%,
   100% {
-      filter: blur(0px);
-      opacity: 1;
+    filter: blur(0px);
+    opacity: 1;
   }
 
   50%,
   80% {
-      filter: blur(180px);
-      opacity: 0;
+    filter: blur(180px);
+    opacity: 0;
   }
 }
