Add and apply fonts

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,25 @@
+@font-face {
+  font-family: 'Chakra Petch';
+  src: local("Chakra_Petch"),
+   url("./fonts/Chakra_Petch/ChakraPetch-Bold.ttf") format("truetype");
+  font-weight: bold;
+ }
+
+ @font-face {
+  font-family: 'Tilt Neon';
+  src: local("Tilt_Neon"),
+   url("./fonts/Tilt_Neon/TiltNeon-Regular-VariableFont_XROT\,YROT.ttf") format("truetype");
+ }
+
+ @font-face {
+  font-family: 'Quicksand';
+  src: local("Quicksand"),
+   url("./fonts/Quicksand/Quicksand-VariableFont_wght.ttf") format("truetype");
+ }
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Quicksand';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
