--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,19 +10,20 @@ header {
   top: 0;
   padding: 5px;
   color: $lightBlue;
+  font-family: 'Chakra Petch';
   
   .fa-chevron-right {
     font-size: 1.8em;
   }
   
   .blinking {
-    -webkit-animation: blink 1.5s steps(5, start) infinite;
-    animation: blink 1.5s steps(5, start) infinite;
+    -webkit-animation: blink 2s steps(5, start) infinite;
+    animation: blink 2s steps(5, start) infinite;
     font-size: 1.7em;
   }
   
   .logo {
-    font-size: 2.3em;
+    font-size: 3em;
 
     &:hover {
       text-shadow: 0px 0px 10px $lightBlue;
