--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,19 +11,19 @@ header {
   padding: 5px;
   color: $lightBlue;
   font-family: 'Chakra Petch';
-  
+
   .fa-chevron-right {
-    font-size: 1.8em;
+    font-size: 1.7rem;
   }
-  
+
   .blinking {
     -webkit-animation: blink 2s steps(5, start) infinite;
     animation: blink 2s steps(5, start) infinite;
-    font-size: 1.7em;
+    font-size: 2rem;
   }
-  
+
   .logo {
-    font-size: 3em;
+    font-size: 3rem;
 
     &:hover {
       text-shadow: 0px 0px 10px $lightBlue;
