--- a/src/components/Slide/Slide.scss
+++ b/src/components/Slide/Slide.scss
@@ -1,5 +1,3 @@
-@import '../../styles/Colors.scss';
-
 .carousel-item {
   display: inline-flex;
   align-items: center;
@@ -17,6 +15,7 @@
   }
 }
 
+// reverse slide elements order on even slides
 .reverse {
   flex-direction: row-reverse;
   align-items: baseline;
