--- a/src/styles/Animations.scss
+++ b/src/styles/Animations.scss
@@ -1,3 +1,4 @@
+//logo blink
 @-webkit-keyframes blink {
   to {
     visibility: hidden;
@@ -10,18 +11,7 @@
   }
 }
 
-@-webkit-keyframes float {
-  50% {
-    -webkit-transform: translateY(30px);
-  }
-}
-
-@keyframes float {
-  50% {
-    transform: translateY(30px);
-  }
-}
-
+//for changing text on home page
 @keyframes switch {
 
   0%,
