Add 404 page + restructure image folder

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
 @import './components/Slide/Slide.scss';
 @import './components/CarouselControls/CarouselControls.scss';
 @import './components/CarouselIndicators/CarouselIndicators.scss';
+@import './pages/404/404.scss';
 
 body {
   background-color: $darkGray;
