Restyle Projects page after adding menu to page

--- a/src/components/Slide/Slide.scss
+++ b/src/components/Slide/Slide.scss
@@ -22,7 +22,13 @@
 
   .slide-text {
     align-self: flex-start;
-    position: relative;
-    top: 15%;
+  }
+
+  .uPick {
+    margin-top: 4%;
+  }
+
+  .tweeter {
+    margin-top: 8%;
   }
 }
