--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -48,16 +48,16 @@
 .intro-imgs {
   flex-wrap: wrap;
 
-  width: 65%;
+  // width: 65%;
   height: 100%;
 
   .intro-img {
     height: 14em;
     width: 14em;
     border-radius: 50%;
-    position: relative;
-    top: 9em;
-    left: 30em;
+    position: absolute;
+    top: 36%;
+    left: 59%;
     box-shadow: $lightBlue 0px 0px 80px 0px;
   }
 
@@ -110,27 +110,27 @@
   }
 
   .about {
-    position: relative;
-    left: 2em;
-    bottom: 6em;
+    position: absolute;
+    left: 45%;
+    top: 14%;
   }
 
   .skills {
-    position: relative;
-    left: 24em;
-    bottom: 2.5em;
+    position: absolute;
+    right: 14%;
+    top:20.5%;
   }
 
   .portfolio {
-    position: relative;
-    top: 22em;
-    left: 21em;
+    position: absolute;
+    bottom: 0%;
+    left: 48.5%;
   }
 
   .contact {
-    position: relative;
-    top: 30em;
-    right: 27em;
+    position: absolute;
+    bottom: 6%;
+    right: 7.5%;
   }
 
   .intro-symbol {
@@ -139,31 +139,32 @@
   }
 
   .angle {
-    position: relative;
-    right: 7em;
-    bottom: 2em;
+    position: absolute;
+    right: 34%;
+    top: 14%;
   }
 
   .curly {
-    position: relative;
-    top: 3em;
-    right: 2em;
+    position: absolute;
+    top: 38%;
+    right: 18%;
   }
 
   .square {
-    position: relative;
-    left: 5em;
-    bottom: 5em;
+    position: absolute;
+    left: 42%;
+    bottom: 47%;
   }
 
   .func {
-    position: relative;
-    left: 10em;
-    top: 3em;
+    position: absolute;
+    right: 25%;
+    bottom: 10%;
   }
 
   .arrow {
-    position: relative;
-    left: 3.5em;
+    position: absolute;
+    left: 60%;
+    bottom: 23%;
   }
 }
