--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -1,3 +1,9 @@
 $darkGray: #2e4057;
-$lightBlue: #e0fbfc;
+// $lightBlue: #e0fbfc;
 $accentYellow: #FFC15E;
+
+$darkBlue: #040622;
+$mediumBlue: #58E7DE;
+$lightBlue: #EEFFFE;
+$darkYellow: #FCD151;
+$lightYellow: #FFFBDD;
