--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,7 +9,7 @@ header {
   position: sticky;
   top: 0;
   padding: 5px;
-  color: $lightBlue;
+  color: $mediumBlue;
   font-family: 'Chakra Petch';
 
   .fa-chevron-right {
