--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -2,8 +2,8 @@ $darkGray: #2e4057;
 // $lightBlue: #e0fbfc;
 $accentYellow: #FFC15E;
 
-$darkBlue: #040622;
+$darkBlue: #080B39;
 $mediumBlue: #58E7DE;
-$lightBlue: #EEFFFE;
+$lightBlue: #EAFFFE;
 $darkYellow: #FCD151;
 $lightYellow: #FFFBDD;
