--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,170 +1,175 @@
-.intro-text {
-  margin-left: 5.4rem;
+.page-content {
+  justify-content: space-evenly;
+  align-items: center;
 
-  div {
-    margin: 1em 0;
+  .intro-text {
+    // margin-left: 5.4rem;
+    color: $darkBlue;
+  
+    div {
+      margin: 1em 0;
+    }
+  
+    .changing-text {
+      filter: contrast(15);
+      height: .5em;
+  
+      span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        animation: switch 9s infinite ease-in-out;
+        min-width: 100%;
+        margin: auto;
+      }
+  
+      span:nth-child(1) {
+        animation-delay: -8.5s;
+      }
+  
+      span:nth-child(2) {
+        animation-delay: -7s;
+      }
+  
+      span:nth-child(3) {
+        animation-delay: -5.5s;
+      }
+  
+      span:nth-child(4) {
+        animation-delay: -4s;
+      }
+  
+      span:nth-child(5) {
+        animation-delay: -2.5s;
+      }
+  
+      span:nth-child(6) {
+        animation-delay: -1s;
+      }
+    }
   }
-
-  .changing-text {
-    filter: contrast(15);
-    height: .5em;
-
-    span {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      animation: switch 9s infinite ease-in-out;
-      min-width: 100%;
-      margin: auto;
-    }
-
-    span:nth-child(1) {
-      animation-delay: -8.5s;
-    }
-
-    span:nth-child(2) {
-      animation-delay: -7s;
-    }
-
-    span:nth-child(3) {
-      animation-delay: -5.5s;
-    }
-
-    span:nth-child(4) {
-      animation-delay: -4s;
-    }
-
-    span:nth-child(5) {
-      animation-delay: -2.5s;
-    }
-
-    span:nth-child(6) {
-      animation-delay: -1s;
-    }
-  }
-}
-
-.intro-imgs {
-  flex-wrap: wrap;
-
-  // width: 65%;
-  height: 100%;
-
+  
   .intro-img {
-    height: 14em;
-    width: 14em;
+    height: 17rem;
+    width: 17rem;
     border-radius: 50%;
-    position: absolute;
-    top: 36%;
-    left: 59%;
-    box-shadow: $lightBlue 0px 0px 80px 0px;
-  }
-
-  .intro-svg {
-    height: 1em;
-    width: 1em;
-    border-radius: 50%;
-    background-color: $lightBlue;
-    color: $darkGray;
-    font-size: 5em;
-    padding: 0.5em;
-
-
-    &:hover {
-      opacity: 0;
-      transition: ease 1.5s;
-      box-shadow: $lightBlue 0px 0px 40px 0px;
-    }
-
-    &:not(:hover) {
-      opacity: 1;
-      transition: ease 1.5s;
-    }
-  }
-
-  .menu-text {
-    opacity: 0;
-    position: relative;
-    top: -10rem;
-    font-size: 2.3rem;
-    font-weight: bold;
-    color: $darkGray;
-    text-align: center;
-    background-color: $lightBlue;
-    height: 10rem;
-    width: 10rem;
-    border-radius: 50%;
-    font-family: "Tilt Neon";
-
-    &:hover {
-      opacity: 1;
-      transition: ease 1s;
-      box-shadow: $lightBlue 0px 0px 40px 0px;
-    }
-
-    &:not(:hover) {
-      opacity: 0;
-      transition: ease 1s;
-    }
-  }
-
-  .about {
-    position: absolute;
-    left: 45%;
-    top: 14%;
-  }
-
-  .skills {
-    position: absolute;
-    right: 14%;
-    top:20.5%;
-  }
-
-  .portfolio {
-    position: absolute;
-    bottom: 0%;
-    left: 48.5%;
-  }
-
-  .contact {
-    position: absolute;
-    bottom: 6%;
-    right: 7.5%;
-  }
-
-  .intro-symbol {
-    font-size: 3em;
-    font-weight: bold;
-  }
-
-  .angle {
-    position: absolute;
-    right: 34%;
-    top: 14%;
-  }
-
-  .curly {
-    position: absolute;
-    top: 38%;
-    right: 18%;
-  }
-
-  .square {
-    position: absolute;
-    left: 42%;
-    bottom: 47%;
-  }
-
-  .func {
-    position: absolute;
-    right: 25%;
-    bottom: 10%;
-  }
-
-  .arrow {
-    position: absolute;
-    left: 60%;
-    bottom: 23%;
   }
 }
+
+
+// .intro-imgs {
+//   flex-wrap: wrap;
+
+//   // width: 65%;
+//   height: 100%;
+
+
+
+//   .intro-svg {
+//     height: 1em;
+//     width: 1em;
+//     border-radius: 50%;
+//     background-color: $lightBlue;
+//     color: $darkGray;
+//     font-size: 5em;
+//     padding: 0.5em;
+
+
+//     &:hover {
+//       opacity: 0;
+//       transition: ease 1.5s;
+//       box-shadow: $lightBlue 0px 0px 40px 0px;
+//     }
+
+//     &:not(:hover) {
+//       opacity: 1;
+//       transition: ease 1.5s;
+//     }
+//   }
+
+//   .menu-text {
+//     opacity: 0;
+//     position: relative;
+//     top: -10rem;
+//     font-size: 2.3rem;
+//     font-weight: bold;
+//     color: $darkGray;
+//     text-align: center;
+//     background-color: $lightBlue;
+//     height: 10rem;
+//     width: 10rem;
+//     border-radius: 50%;
+//     font-family: "Tilt Neon";
+
+//     &:hover {
+//       opacity: 1;
+//       transition: ease 1s;
+//       box-shadow: $lightBlue 0px 0px 40px 0px;
+//     }
+
+//     &:not(:hover) {
+//       opacity: 0;
+//       transition: ease 1s;
+//     }
+//   }
+
+//   .about {
+//     position: absolute;
+//     left: 45%;
+//     top: 14%;
+//   }
+
+//   .skills {
+//     position: absolute;
+//     right: 14%;
+//     top:20.5%;
+//   }
+
+//   .portfolio {
+//     position: absolute;
+//     bottom: 0%;
+//     left: 48.5%;
+//   }
+
+//   .contact {
+//     position: absolute;
+//     bottom: 6%;
+//     right: 7.5%;
+//   }
+
+//   .intro-symbol {
+//     font-size: 3em;
+//     font-weight: bold;
+//   }
+
+//   .angle {
+//     position: absolute;
+//     right: 34%;
+//     top: 14%;
+//   }
+
+//   .curly {
+//     position: absolute;
+//     top: 38%;
+//     right: 18%;
+//   }
+
+//   .square {
+//     position: absolute;
+//     left: 42%;
+//     bottom: 47%;
+//   }
+
+//   .func {
+//     position: absolute;
+//     right: 25%;
+//     bottom: 10%;
+//   }
+
+//   .arrow {
+//     position: absolute;
+//     left: 60%;
+//     bottom: 23%;
+//   }
+// }
