--- a/src/App.scss
+++ b/src/App.scss
@@ -13,12 +13,6 @@
 @import './components/CarouselIndicators/CarouselIndicators.scss';
 @import './pages/404/404.scss';
 
-// body {
-//   background-color: $darkGray;
-//   background-image: url(./img/dark-mosaic.png);
-//   color: $lightBlue;
-// }
-
 a,
 a:visited {
   text-decoration: none;
@@ -125,55 +119,12 @@ ul {
   .intro-text {
     font-size: 3rem;
   }
-
-  .intro-imgs {
-    .skills {
-      right: 10%;
-    }
-
-    .func {
-      right: 20%;
-    }
-
-    .arrow {
-      left: 62%
-    }
-  }
 }
 
 // average laptop
 @media only screen and (max-width: 1366px) {
   .intro-text {
     font-size: 2.5rem;
-  }
-
-  .intro-imgs {
-    .skills {
-      right: 6%;
-    }
-
-    .portfolio {
-      left: 48.5%;
-      bottom: -6%;
-    }
-
-    .contact {
-      bottom: 0%;
-      right: 8.5%;
-    }
-
-    .angle {
-      right: 30%;
-    }
-
-    .func {
-      right: 20%;
-    }
-
-    .arrow {
-      left: 53%;
-      bottom: 32%;
-    }
   }
 }
 
@@ -182,45 +133,15 @@ ul {
   .intro-text {
     font-size: 2.5rem;
   }
-
-  .intro-imgs {
-
-    .angle,
-    .curly,
-    .square,
-    .func,
-    .arrow {
-      display: none;
-    }
-  }
 }
 
 // large mobile
 @media only screen and (max-width: 810px) {
-  .main-content {
-    display: flex;
+  .page-content {
     flex-direction: column-reverse;
 
     .intro-text {
       font-size: 2.5rem;
-    }
-
-    .intro-imgs {
-      .intro-img {
-        left: 40%;
-      }
-
-      .about,
-      .skills,
-      .portfolio,
-      .contact,
-      .angle,
-      .curly,
-      .square,
-      .func,
-      .arrow {
-        display: none;
-      }
     }
   }
 }
