--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -5,46 +5,19 @@
   .intro-text {
     color: $darkBlue;
   
-    div {
-      margin: 1em 0;
-    }
-  
     .changing-text {
-      filter: contrast(15);
-      height: .5em;
-  
-      span {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        animation: switch 9s infinite ease-in-out;
-        min-width: 100%;
-        margin: auto;
-      }
-  
-      span:nth-child(1) {
-        animation-delay: -8.5s;
-      }
-  
-      span:nth-child(2) {
-        animation-delay: -7s;
-      }
-  
-      span:nth-child(3) {
-        animation-delay: -5.5s;
-      }
-  
-      span:nth-child(4) {
-        animation-delay: -4s;
-      }
-  
-      span:nth-child(5) {
-        animation-delay: -2.5s;
-      }
-  
-      span:nth-child(6) {
-        animation-delay: -1s;
+      height: 3.7rem;
+      color: $mediumBlue;
+      overflow: hidden;
+
+      ul {
+        margin: 0;
+        padding: 0;
+        animation: change 12s infinite;
+
+        li {
+          height: 3.7rem;
+        }
       }
     }
   }
