--- a/src/styles/Animations.scss
+++ b/src/styles/Animations.scss
@@ -27,3 +27,93 @@
     opacity: 0;
   }
 }
+
+@keyframes change {
+
+  0%,
+  9%,
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  18% {
+    transform: translate3d(0, -17%, 0);
+  }
+
+  27% {
+    transform: translate3d(0, -33.5%, 0);
+  }
+
+  36% {
+    transform: translate3d(0, -50%, 0);
+  }
+
+  45% {
+    transform: translate3d(0, -67.5%, 0);
+  }
+
+  54% {
+    transform: translate3d(0, -84.5%, 0);
+  }
+
+  63% {
+    transform: translate3d(0, -67.5%, 0);
+  }
+
+  72% {
+    transform: translate3d(0, -50%, 0);
+  }
+
+  81% {
+    transform: translate3d(0, -33.5%, 0);
+  }
+
+  90% {
+    transform: translate3d(0, -17%, 0);
+  }
+}
+
+@-webkit-keyframes change {
+
+  0%,
+  9%,
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  18% {
+    transform: translate3d(0, -16%, 0);
+  }
+
+  27% {
+    transform: translate3d(0, -33%, 0);
+  }
+
+  36% {
+    transform: translate3d(0, -50%, 0);
+  }
+
+  45% {
+    transform: translate3d(0, -68%, 0);
+  }
+
+  54% {
+    transform: translate3d(0, -85%, 0);
+  }
+
+  63% {
+    transform: translate3d(0, -68%, 0);
+  }
+
+  72% {
+    transform: translate3d(0, -50%, 0);
+  }
+
+  81% {
+    transform: translate3d(0, -33%, 0);
+  }
+
+  90% {
+    transform: translate3d(0, -16%, 0);
+  }
+}
