--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@
 a,
 a:visited {
   text-decoration: none;
-  color: $mediumBlue;
+  color: $darkBlue;
 }
 
 ul {
@@ -102,11 +102,32 @@ ul {
   height: 95vh;
   margin: auto;
   margin-top: 2vh;
-  overflow: hidden;
+  // overflow: hidden;
+
+  .menu-bckgrd {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 10rem;
+    width: 40rem;
+    background-color: $darkYellow;
+    opacity: 30%;
+  }
+
+  .footer-bckgrd {
+    position: absolute;
+    bottom: -14rem;
+    left: -9rem;
+    height: 25rem;
+    width: 25rem;
+    background-color: $darkYellow;
+    opacity: 20%;
+    border-radius: 50%;
+  }
 
   .main-content {
     width: 100%;
-    height: 80%;
+    height: 86%;
 
     .page-content {
       width: 100%;
@@ -130,18 +151,57 @@ ul {
 
 // tablets
 @media only screen and (max-width: 1280px) {
+  header {
+    .logo {
+      font-size: 2.5rem;
+    }
+  
+    .menu {
+      font-size: 1.5rem;
+    }
+  } 
+
   .intro-text {
     font-size: 2.5rem;
+  }
+
+  .App .menu-bckgrd {
+    width: 28rem;
+    height: 8rem;
+  }
+
+  .App .footer-bckgrd {
+    width: 23rem;
+    height: 23rem;
   }
 }
 
 // large mobile
 @media only screen and (max-width: 810px) {
+  .App .menu-bckgrd {
+    display: none;
+  }
+
+  // nav.narrow {
+  //   display: contents;
+  // }
+
+  header {
+    .logo {
+      font-size: 2.5rem;
+    }
+
+    .menu {
+      font-size: 1.5rem;
+    }
+  }
+  
   .page-content {
     flex-direction: column-reverse;
 
     .intro-text {
       font-size: 2.5rem;
+      text-align: center;
     }
   }
 }
