--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,8 @@
 .links a {
   display: inline-flex;
 
-  width: 4rem;
+  width: 2rem;
   height: 2rem;
+  padding-right: 1rem;
+  margin-top: 1.5rem;
 }
