--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,15 +1,14 @@
 header {
   display: flex;
-  justify-content: flex-start;
-  align-items: baseline;
+  justify-content: space-between;
+  align-items: center;
   align-self: flex-start;
 
   width: 100%;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  padding: 5px;
-  color: $mediumBlue;
+  // color: $mediumBlue;
   font-family: 'Chakra Petch';
 
   .fa-chevron-right {
@@ -24,9 +23,5 @@ header {
 
   .logo {
     font-size: 3rem;
-
-    &:hover {
-      text-shadow: 0px 0px 10px $lightBlue;
-    }
   }
 }
