--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -11,6 +11,7 @@
 
   a, a:visited {
     color: $darkBlue;
+    border-bottom: 5px solid transparent;
   }
 
   li {
@@ -19,9 +20,9 @@
 }
 
 .hamburger {
-  width: 5rem;
-  height: 5rem;
-  background-color: $darkYellow;
+  width: 3rem;
+  height: 3rem;
+  z-index: 1;
 
   .burger-line {
     width: 2rem;
