--- a/src/components/CarouselControls/CarouselControls.scss
+++ b/src/components/CarouselControls/CarouselControls.scss
@@ -6,7 +6,7 @@
   display: inline-block;
   position: absolute;
   top: calc(50% - 25px);
-  color: $lightBlue;
+  color: $mediumBlue;
   cursor: pointer;
   font-size: 3rem;
 }
@@ -16,5 +16,5 @@
 }
 
 .right {
-  right: 12vw;
+  right: 3vw;
 }
