--- a/src/components/CarouselIndicators/CarouselIndicators.scss
+++ b/src/components/CarouselIndicators/CarouselIndicators.scss
@@ -11,7 +11,7 @@
     width: 15px;
     height: 15px;
     border: none;
-    background: $lightBlue;
+    background: $mediumBlue;
     opacity: 0.5;
     margin: 0.2em;
     border-radius: 50%;
