--- a/src/pages/Skills/Skills.scss
+++ b/src/pages/Skills/Skills.scss
@@ -1,32 +1,31 @@
-img.logo {
-  height: 4rem;
-  width: auto;
-  filter: brightness(0) saturate(100%) invert(93%) sepia(16%) saturate(244%) hue-rotate(146deg) brightness(102%) contrast(98%);
+div.skills {
+  justify-content: center;
 
-  &:hover {
-    filter: none;
+  .profile {
+    margin: .5rem 0;
+    font-weight: 500;
   }
-}
 
-h2.full-width {
-  text-align: center;
-}
+  span.logos {
+    margin: 0 1.2rem;
 
-span.logos {
-  margin: 0 1.2rem;
-}
+    img.logo {
+      height: 3.5rem;
+      width: auto;
+    }
+  }
 
-.languages {
-  margin-top: 3rem;
-  margin-bottom: 1rem;
-}
-
-.test {
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-}
-
-.profile {
-  margin: .5rem 0;
-  font-weight: 500;
+  h2.full-width {
+    text-align: center;
+  }
+  
+  .languages {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+  }
+  
+  .test {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+  }
 }
