--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,11 +5,13 @@
   font-size: 2rem;
   margin: 0;
 
-  a.active, a:visited.active  {
+  a.active,
+  a:visited.active {
     border-bottom: 5px solid $darkBlue;
   }
 
-  a, a:visited {
+  a,
+  a:visited {
     color: $darkBlue;
     border-bottom: 5px solid transparent;
   }
@@ -19,20 +21,112 @@
   }
 }
 
-.hamburger {
-  width: 3rem;
-  height: 3rem;
-  z-index: 1;
+nav {
+  justify-self: center;
 
-  .burger-line {
-    width: 2rem;
-    height: .32rem;
-    border-radius: 10px;
-    background-color: $darkBlue;
-    margin: .15rem 0;
+  .ham-menu {
+    width: 3rem;
+    height: 1.6rem;
+    z-index: 3;
+
+    input {
+      appearance: none;
+      -webkit-appearance: none;
+      display: none;
+      visibility: hidden;
+    }
+
+    .bar {
+      display: block;
+      position: relative;
+      cursor: pointer;
+      height: 1.5rem;
+
+      &:hover {
+        span {
+          background: $darkYellow;
+        }
+      }
+
+      span {
+        position: absolute;
+        width: 2rem;
+        height: .3rem;
+        background: black;
+        border-radius: 100px;
+        display: inline-block;
+        transition: 0.3s ease;
+        left: 0;
+        z-index: 4;
+      }
+
+      span.top {
+        top: 0;
+      }
+
+      span.middle {
+        top: .64rem;
+      }
+
+      span.bottom {
+        bottom: 0;
+      }
+    }
+
+    input[type] {
+      &:checked {
+        ~ {
+          span.top {
+            transform: rotate(45deg);
+            transform-origin: top center;
+            width: 1.7rem;
+            left: 4.04rem;
+            top: 1.5rem;
+          }
+
+          span.bottom {
+            transform: rotate(-45deg);
+            transform-origin: top center;
+            width: 1.7rem;
+            top: 1.5rem;
+            left: 3.8rem;
+          }
+
+          span.middle {
+            transform: translateX(-20px);
+            opacity: 0;
+          }
+        }
+      }
+    }
+  }
+
+  .side-menu {
+    position: absolute;
+    z-index: 7;
+    text-align: right;
+    top: 5rem;
+    right: 1rem;
+    font-family: 'Tilt Neon';
+    font-size: xx-large;
   }
 }
 
-nav {
-  justify-self: center;
+.ham-bckgrd {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 6rem;
+  height: 6rem;
+  background-color: $lightYellow;
+  display: none;
+  z-index: 2;
+  
+  &.expanded {
+    animation: openMenu 1s forwards;
+  }
+
+  &.collapsed {
+    animation: closeMenu 1s forwards;
+  }
 }
